# MemosNote

./: .gitignore  ERRORS.md
.github/workflows/: build.yml  desktop_ClientBuild_Ubuntu24.04.yml  desktop_ClientBuild_Windows.yml  release_please.yml
docs/DIY/: Update_test.md  implementation_plan.md  research_report.md
server/router/api/v1/: netease.go  v1.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/src/components/: Navigation.tsx  ThemeSelect.tsx
web/src/components/EmbeddedMusicPlayer/: EmbeddedMusicPlayer.tsx  index.ts
web/src/layouts/: RootLayout.tsx
web/src/themes/: catppuccin.css  dracula.css  everforest-dark.css  everforest-light.css
web/src/types/modules/: setting.d.ts
web/src/utils/: theme.ts
